Fix tools button gaps

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -458,6 +458,7 @@ ul.doc-list > li .message {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  gap: 4px;
 }
 
 .tool-button i.icon {
